[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/self-made/characters/Ice_Queen.png" type="Texture" id=1]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/WitchEnemy.gd" type="Script" id=3]
[ext_resource path="res://actors/WitchAI.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 12 )

[sub_resource type="CircleShape2D" id=5]
radius = 135.033

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.643137, 0.121569, 0.121569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.239216, 0.239216, 0.239216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="WitchEnemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 19, 37, 60, 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI" groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
position = Vector2( -9, 0 )
shape = SubResource( 5 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -18.0
margin_top = 18.0
margin_right = 18.0
margin_bottom = 24.0
mouse_filter = 2
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 60.0
value = 60.0
percent_visible = false

[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
